--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="board__grid">
                     <div class="board-member">
                         <div class="board-member__avatar">
-                            <img src="images/dhruv.png" alt="dhruv" class="board-member__photo">
+                            <img src="images/team/dhruvvvv.jpeg" alt="dhruv" class="board-member__photo">
                         </div>
                         <div class="board-member__info">
                             <h3 class="board-member__name">Dhruv Malhotra</h3>
@@ -211,7 +211,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/rayna.png" alt="Rayna" class="board-member__photo">
+                                <img src="images/team/Rayna_Maheshwari_startupdirector.jpg" alt="Rayna" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Rayna</h3>
@@ -222,7 +222,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/subodh.png" alt="Subodh" class="board-member__photo">
+                                <img src="images/team/SubodhBansal-startupconsultingdiro.jpg" alt="Subodh" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Subodh</h3>
@@ -244,7 +244,31 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/dishit.png" alt="Dishit" class="board-member__photo">
+                                <img src="images/team/AnkushPGRep-StartupConsulting.png" alt="Ankush" class="board-member__photo">
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Ankush</h3>
+                                <p class="board-member__position">Startup Coordinator</p>
+                                <p class="board-member__description">Driving startup projects and collaborations</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <img src="images/team/Oorja_Khetarpal-PGrep-Startups.jpg" alt="Ankush" class="board-member__photo">
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Ankush</h3>
+                                <p class="board-member__position">Startup Coordinator</p>
+                                <p class="board-member__description">Driving startup projects and collaborations</p>
+                            </div>
+                        </div>
+
+                        
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <img src="images/team/Dishit_Johari-Marketing.jpeg" alt="Dishit" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Dishit</h3>
@@ -266,7 +290,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/satyam.png" alt="Satyam" class="board-member__photo">
+                                <img src="images/team/satyumm.png" alt="Satyam" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Satyam</h3>
@@ -277,7 +301,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/avin.png" alt="Avin" class="board-member__photo">
+                                <img src="images/team/avinnn.png" alt="Avin" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Avin</h3>
@@ -288,7 +312,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/dipen.png" alt="Dipen" class="board-member__photo">
+                                <img src="images/team/Dipen_Bansal_Corpcomm.jpg" alt="Dipen" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Dipen</h3>
@@ -299,7 +323,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/aviral.png" alt="Aviral" class="board-member__photo">
+                                <img src="images/team/Aviral_Akshat-corpcomm.png" alt="Aviral" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Aviral</h3>
@@ -310,7 +334,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/krish.png" alt="Krish" class="board-member__photo">
+                                <img src="images/team/Krish_Goswami-Events.jpg" alt="Krish" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Krish</h3>
@@ -332,7 +356,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/urvi.png" alt="Urvi" class="board-member__photo">
+                                <img src="images/team/Urvi_Gawri_Events.jpg" alt="Urvi" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Urvi</h3>
