--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                     <a href="#home" class="nav__link">Home</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#initiatives" class="nav__link">Events</a>
-                </li>
-                <li class="nav__item">
-                    <a href="#bep" class="nav__link">BEP</a>
+                    <a href="#events" class="nav__link">Events</a>
                 </li>
                 <li class="nav__item">
                     <a href="#team" class="nav__link">Team</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#collaborations" class="nav__link">Collaborations</a>
                 </li>
                 <li class="nav__item">
                     <a href="#partners" class="nav__link">Clients</a>
@@ -146,6 +146,112 @@
         </div>
     </section> -->
 
+    <!-- Events Section -->
+    <section id="events" class="events">
+        <div class="container">
+            <h2 class="section__title">Events</h2>
+            
+            <!-- Upcoming Events -->
+            <div class="events__section">
+                <h3 class="events__section-title">Upcoming Events</h3>
+                <div class="events__grid">
+                    <div class="event-card">
+                        <div class="event-card__image">
+                            <img src="images/events/upcoming_event1.jpeg" alt="Merger Mayhem" class="event-card__photo">
+                        </div>
+                        <div class="event-card__content">
+                            <h4 class="event-card__title">Merger Mayhem</h4>
+                            <p class="event-card__description">A comprehensive competition focusing on merger and acquisition strategies, where teams analyze real-world business scenarios and present their strategic recommendations.</p>
+                            <div class="event-card__details">
+                                <div class="event-card__detail">
+                                    <strong>Date:</strong>1 September 2025
+                                </div>
+                                <div class="event-card__detail">
+                                    <strong>Time:</strong> 7:30 PM Onwards
+                                </div>
+                                <div class="event-card__detail">
+                                    <strong>Venue:</strong> Lecture Hall Complex
+                                </div>
+                            </div>
+                            <div class="event-card__actions">
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLScF8xntGGujQSOFEErGlXGcqYWuSRZcgsdYqtLDZwNVk4C1JA/viewform" target="_blank" rel="noopener noreferrer" class="btn btn--primary btn--event-register">Register Now</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="event-card">
+                        <div class="event-card__image">
+                            <img src="images/events/upcomingevent2.png" alt="Margin Call" class="event-card__photo">
+                        </div>
+                        <div class="event-card__content">
+                            <h4 class="event-card__title">Margin Call</h4>
+                            <p class="event-card__description">An intensive finance simulation event where participants navigate complex financial crises and make critical investment decisions under pressure.</p>
+                            <div class="event-card__details">
+                                <div class="event-card__detail">
+                                    <strong>Date:</strong> 31 August 2025
+                                </div>
+                                <div class="event-card__detail">
+                                    <strong>Time:</strong> 1:00 PM
+                                </div>
+                                <div class="event-card__detail">
+                                    <strong>Venue:</strong> Lecture Hall Complex
+                                </div>
+                            </div>
+                            <div class="event-card__actions">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Past Events -->
+            <div class="events__section">
+                <h3 class="events__section-title">Past Events</h3>
+                <div class="events__grid events__grid--past">
+                    <div class="event-card event-card--past">
+                        <div class="event-card__image">
+                            <img src="images/guesstimate_league.png" alt="Guesstimate League" class="event-card__photo">
+                        </div>
+                        <div class="event-card__content">
+                            <h4 class="event-card__title">Guesstimate League</h4>
+                            <p class="event-card__description"> Crack fun guesstimates in fast-paced rounds</p>
+                        </div>
+                    </div>
+
+                    <div class="event-card event-card--past">
+                        <div class="event-card__image">
+                            <img src="images/events/mystery_business.png" alt="Mystery Business Challenge" class="event-card__photo">
+                        </div>
+                        <div class="event-card__content">
+                            <h4 class="event-card__title">Mystery Business Challenge</h4>
+                            <p class="event-card__description">Solve quirky, unpredictable business puzzles</p>
+                        </div>
+                    </div>
+
+                    <div class="event-card event-card--past">
+                        <div class="event-card__image">
+                            <img src="images/events/consulting_cxo_talks.png" alt="CXO Talks" class="event-card__photo">
+                        </div>
+                        <div class="event-card__content">
+                            <h4 class="event-card__title">CXO Talks</h4>
+                            <p class="event-card__description">Learn straight from industry leaders who’ve built and scaled businesses</p>
+                        </div>
+                    </div>
+
+                    <div class="event-card event-card--past">
+                        <div class="event-card__image">
+                            <img src="images/events/guest_talks.png" alt="Startup Expo" class="event-card__photo">
+                        </div>
+                        <div class="event-card__content">
+                            <h4 class="event-card__title">Startup Expo</h4>
+                            <p class="event-card__description">A showcase of innovative startups and entrepreneurial ventures from our ecosystem</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Team Section -->
     <section id="team" class="board">
         <div class="container">
@@ -158,8 +264,8 @@
                 <div class="board__grid">
                     <div class="board-member">
                         <div class="board-member__avatar">
-                            <span class="board-member__initials">DM</span>
-                        </div>
+                                <img src="images/team/dhruv.png" alt="Dhruv" class="board-member__photo">
+                            </div>
                         <div class="board-member__info">
                             <h3 class="board-member__name">Dhruv Malhotra</h3>
                             <p class="board-member__position">President</p>
@@ -169,8 +275,8 @@
 
                     <div class="board-member">
                         <div class="board-member__avatar">
-                            <span class="board-member__initials">SM</span>
-                        </div>
+                                <img src="images/team/shiv.jpeg" alt="Shiv" class="board-member__photo">
+                            </div>
                         <div class="board-member__info">
                             <h3 class="board-member__name">Shiv Malhotra</h3>
                             <p class="board-member__position">Vice President</p>
@@ -180,8 +286,8 @@
 
                     <div class="board-member">
                         <div class="board-member__avatar">
-                            <span class="board-member__initials">RB</span>
-                        </div>
+                                <img src="images/team/ria_barodia.jpeg" alt="Ria" class="board-member__photo">
+                            </div>
                         <div class="board-member__info">
                             <h3 class="board-member__name">Ria Barodia</h3>
                             <p class="board-member__position">Vice President</p>
@@ -369,6 +475,46 @@
         </div>
     </section>
 
+    <!-- Our Collaborations Section -->
+    <section id="collaborations" class="collaborations">
+        <div class="container">
+            <h2 class="section__title">Our Collaborations</h2>
+            <p class="collaborations__description">We partner with leading consulting clubs across premier institutions to foster knowledge exchange and collaborative growth.</p>
+            
+            <div class="collaborations__grid">
+                <div class="collaboration-partner">
+                    <div class="collaboration-partner__logo">
+                        <span class="collaboration-partner__initials">MH</span>
+                    </div>
+                    <div class="collaboration-partner__info">
+                        <h3 class="collaboration-partner__name">Miranda House Consultancy Forum</h3>
+                        <p class="collaboration-partner__institution">Delhi University</p>
+                    </div>
+                </div>
+
+                <div class="collaboration-partner">
+                    <div class="collaboration-partner__logo">
+                        <span class="collaboration-partner__initials">SC</span>
+                    </div>
+                    <div class="collaboration-partner__info">
+                        <h3 class="collaboration-partner__name">Shri Ram Consulting & Research Centre</h3>
+                        <p class="collaboration-partner__institution">Delhi University</p>
+                    </div>
+                </div>
+
+                <div class="collaboration-partner">
+                    <div class="collaboration-partner__logo">
+                        <span class="collaboration-partner__initials">BP</span>
+                    </div>
+                    <div class="collaboration-partner__info">
+                        <h3 class="collaboration-partner__name">BITS Pilani Consulting Club</h3>
+                        <p class="collaboration-partner__institution">BITS Pilani</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Clients Section -->
     <section id="clients" class="clients">
         <div class="container">
@@ -437,6 +583,7 @@
                     <a href="#initiatives">Events</a>
                     <a href="#bep">BEP</a>
                     <a href="#team">Team</a>
+                    <a href="#collaborations">Collaborations</a>
                     <a href="#clients">Clients</a>
                     <a href="#contact">Contact</a>
                 </div>
