collaborators logos fixed, bnc logo added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <nav class="nav">
             <div class="nav__brand">
-                <h2>BnC IIT Delhi</h2>
+                <img src="images/logo.webp" alt="BnC IIT Delhi" class="nav__logo">
             </div>
             <ul class="nav__menu" id="nav-menu">
                 <li class="nav__item">
@@ -20,15 +20,8 @@
                 <li class="nav__item">
                     <a href="#initiatives" class="nav__link">Events</a>
                 </li>
-                <!-- <li class="nav__item">
-                    <a href="#bep" class="nav__link">BEP</a> -->
-                    <a href="#events" class="nav__link">Events</a>
-                </li>
                 <li class="nav__item">
                     <a href="#team" class="nav__link">Team</a>
-                </li>
-                <li class="nav__item">
-                    <a href="#collaborations" class="nav__link">Collaborations</a>
                 </li>
                 <li class="nav__item">
                     <a href="#collaborations" class="nav__link">Collaborations</a>
@@ -112,46 +105,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Board Education Program Section
-    <section id="bep" class="bep">
-        <div class="container">
-            <div class="bep__content">
-                <h2 class="section__title">Board Education Program</h2>
-                <p class="bep__description">New club members learn fundamental business concepts in finance, consulting, and entrepreneurship during our intensive semester-long program.</p>
-                
-                <div class="bep__benefits">
-                    <h3 class="bep__benefits-title">Program Benefits</h3>
-                    <div class="benefits-grid">
-                        <div class="benefit-item">
-                            <h4>Fundamental Business Concepts</h4>
-                            <p>Learn core principles across finance, consulting, and entrepreneurship</p>
-                        </div>
-                        <div class="benefit-item">
-                            <h4>Hands-on Projects</h4>
-                            <p>Apply knowledge through real-world business challenges</p>
-                        </div>
-                        <div class="benefit-item">
-                            <h4>Professional Presentations</h4>
-                            <p>Develop presentation skills through project showcases</p>
-                        </div>
-                        <div class="benefit-item">
-                            <h4>Industry Exposure</h4>
-                            <p>Connect with industry professionals and gain insights</p>
-                        </div>
-                        <div class="benefit-item">
-                            <h4>Networking Opportunities</h4>
-                            <p>Build connections with peers and industry leaders</p>
-                        </div>
-                        <div class="benefit-item">
-                            <h4>Skill Development</h4>
-                            <p>Enhance analytical and problem-solving capabilities</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <!-- Events Section -->
     <section id="events" class="events">
@@ -515,7 +468,7 @@
             <div class="collaborations__grid">
                 <div class="collaboration-partner">
                     <div class="collaboration-partner__logo">
-                        <span class="collaboration-partner__initials">MH</span>
+                        <img src="images/partners/miranda_house.png" alt="Miranda House Consultancy Forum Logo" class="collaboration-partner__logo-img">
                     </div>
                     <div class="collaboration-partner__info">
                         <h3 class="collaboration-partner__name">Miranda House Consultancy Forum</h3>
@@ -525,7 +478,7 @@
 
                 <div class="collaboration-partner">
                     <div class="collaboration-partner__logo">
-                        <span class="collaboration-partner__initials">SC</span>
+                        <img src="images/partners/srcc.png" alt="Shri Ram Consulting & Research Centre Logo" class="collaboration-partner__logo-img">
                     </div>
                     <div class="collaboration-partner__info">
                         <h3 class="collaboration-partner__name">Shri Ram Consulting & Research Centre</h3>
@@ -535,7 +488,7 @@
 
                 <div class="collaboration-partner">
                     <div class="collaboration-partner__logo">
-                        <span class="collaboration-partner__initials">BP</span>
+                        <img src="images/partners/bits_pilani_consulting.jpeg" alt="BITS Pilani Consulting Club Logo" class="collaboration-partner__logo-img">
                     </div>
                     <div class="collaboration-partner__info">
                         <h3 class="collaboration-partner__name">BITS Pilani Consulting Club</h3>
