--- a/index.html
+++ b/index.html
@@ -53,52 +53,51 @@
         </div>
     </section>
 
+   
+
+
     <!-- Initiatives Section -->
     <section id="initiatives" class="initiatives">
         <div class="container">
-            <h2 class="section__title">Business Strategies</h2>
+            <h2 class="section__title">Flagship Events</h2>
             <div class="initiatives__grid">
                 <div class="initiative-card">
                     <div class="initiative-card__header initiative-card__header--finance">
-                        <h3 class="initiative-card__title">Business Strategies</h3>
+                        <h3 class="initiative-card__title">Flagship Events</h3>
                     </div>
                     <div class="initiative-card__body">
-                        <p class="initiative-card__description">Our business strategies focus on fostering innovation, collaboration, and sustainable growth. We strive to create unique value for our members through skill-development workshops, hands-on projects, and industry exposure while building strong networks with alumni and partners.</p>
+                        <p class="initiative-card__description">The Events Vertical at BnC is where the excitement happens — a space designed to push your boundaries, test your creativity, and give you a taste of real-world business in fun and competitive formats. From fast-paced challenges to high-stakes simulations and inspiring speaker sessions, this is where you get to learn, compete, and grow — all while having a great time with your peers.</p>
                         <ul class="initiative-card__activities">
-                            <li>Innovation First</li>
-                            <li>Collaboration & Networking</li>
-                            <li>Sustainability & Growth</li>
-                            <li>Community Impact</li>
+                            <li>Guestimate League – Crack fun, fast-paced guesstimation rounds.</li>
+                            <li>Mystery Business Challenge – Solve quirky, unpredictable business puzzles.</li>
+                            <li>CXO Talks – Learn straight from industry leaders who’ve built and scaled businesses.</li>
+                            <li>Startup Expo Case Competition – Compete with ideas, showcase startups, and celebrate innovation</li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="initiative-card">
                     <div class="initiative-card__header initiative-card__header--consulting">
-                        <h3 class="initiative-card__title">Consulting</h3>
+                        <h3 class="initiative-card__title">Corporate Comms</h3>
                     </div>
                     <div class="initiative-card__body">
-                        <p class="initiative-card__description">The Consulting Initiative connects our members to top consulting firms. We partner with local start-ups and established firms on strategy projects.</p>
+                        <p class="initiative-card__description">The vertical connects the club with consulting firms, VCs, companies, and consulting bodies of other institutes, creating collaborations that enrich our activities</p>
                         <ul class="initiative-card__activities">
-                            <li>Case Studies</li>
-                            <li>Strategy Projects</li>
-                            <li>Client Consulting</li>
-                            <li>Industry Analysis</li>
+                            <li>The team reaches out to companies for live projects, workshops, and speaker sessions to give students real-world exposure</li>
+                            <li> We also manage communication, publicity, and the club’s representation, ensuring BnC maintains a strong and credible presence in and outside the campus.</li>
+                            
                         </ul>
                     </div>
                 </div>
 
                 <div class="initiative-card">
                     <div class="initiative-card__header initiative-card__header--entrepreneurship">
-                        <h3 class="initiative-card__title">Entrepreneurship</h3>
+                        <h3 class="initiative-card__title">Startup Consulting</h3>
                     </div>
                     <div class="initiative-card__body">
-                        <p class="initiative-card__description">We work to spur entrepreneurial ventures among IIT Delhi undergraduates through speaker series and mentorship programs.</p>
+                        <p class="initiative-card__description">We partner with early-stage ventures to address strategic and operational challenges.</p>
                         <ul class="initiative-card__activities">
-                            <li>Speaker Series</li>
-                            <li>Startup Incubation</li>
-                            <li>Pitch Competitions</li>
-                            <li>Mentorship Programs</li>
+                            <li>Through real projects, members gain hands-on experience in market analysis, business models, and growth strategies while making tangible impact</li>
                         </ul>
                     </div>
                 </div>
