cream color + projects done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#collaborations" class="nav__link">Collaborations</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#clients" class="nav__link">Clients</a>
+                    <a href="#clients" class="nav__link">Projects</a>
                 </li>
                 <li class="nav__item">
                     <a href="#contact" class="nav__link">Contact</a>
@@ -502,37 +502,67 @@
     <!-- Clients Section -->
     <section id="clients" class="clients">
         <div class="container">
-            <h2 class="section__title">Our Clients</h2>
-            <p class="clients__description">Hear what our clients say about their experience working with BnC, IIT Delhi.</p>
+            <h2 class="section__title">Our Projects</h2>
             
-            <div class="testimonials__grid">
-                <div class="testimonial-card">
-                    <div class="testimonial__content">
-                        <p class="testimonial__quote">"Working with BnC, IIT Delhi has always been a pleasure. Their professionalism, efficiency, and ability to deliver high-quality work under tight deadlines truly stand out."</p>
-                    </div>
-                    <div class="testimonial__author">
-                        <h4 class="testimonial__name">Mr. Aman Singh</h4>
-                        <p class="testimonial__title">Founder, SayF</p>
-                    </div>
-                </div>
-
-                <div class="testimonial-card">
-                    <div class="testimonial__content">
-                        <p class="testimonial__quote">"The team's market research gave us clear, actionable insights and helped us identify promising new product opportunities."</p>
-                    </div>
-                    <div class="testimonial__author">
-                        <h4 class="testimonial__name">Mr. Prudhvi Varma</h4>
-                        <p class="testimonial__title">Founder, ZOLVE</p>
+            <!-- Current Clients -->
+            <div class="clients__section">
+                <h3 class="clients__section-title">Ongoing Projects</h3>
+                <div class="clients__grid">
+                    <div class="client-card">
+                        <div class="client-card__logo">
+                            <img src="images/rentbasket.png" alt="RentBasket Logo" class="client-card__logo-img">
+                        </div>
+                        <div class="client-card__info">
+                            <h4 class="client-card__name">RentBasket</h4>
+                            <p class="testimonial__quote">Leading rental marketplace platform</p>
+                        </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="testimonial-card">
-                    <div class="testimonial__content">
-                        <p class="testimonial__quote">"It was a great experience with all of you. We would want to continue working for few more interesting assignments with BnC IITD in near future."</p>
+            <!-- Past Clients -->
+            <div class="clients__section">
+                <h3 class="clients__section-title">Past Projects</h3>
+                <p class="clients__description">Hear what our clients say about their experience working with BnC, IIT Delhi.</p>
+                
+                <div class="testimonials__grid">
+                    <div class="testimonial-card">
+                        <div class="testimonial__logo">
+                            <img src="images/sayf.png" alt="SayF Logo" class="testimonial__logo-img">
+                        </div>
+                        <div class="testimonial__content">
+                            <p class="testimonial__quote">"Working with BnC, IIT Delhi has always been a pleasure. Their professionalism, efficiency, and ability to deliver high-quality work under tight deadlines truly stand out."</p>
+                        </div>
+                        <div class="testimonial__author">
+                            <h4 class="testimonial__name">Mr. Aman Singh</h4>
+                            <p class="testimonial__title">Founder, SayF</p>
+                        </div>
                     </div>
-                    <div class="testimonial__author">
-                        <h4 class="testimonial__name">Mr. Kirtiman Mishra</h4>
-                        <p class="testimonial__title">Founder, WorldRef</p>
+
+                    <div class="testimonial-card">
+                        <div class="testimonial__logo">
+                            <img src="images/zolve.png" alt="ZOLVE Logo" class="testimonial__logo-img">
+                        </div>
+                        <div class="testimonial__content">
+                            <p class="testimonial__quote">"The team's market research gave us clear, actionable insights and helped us identify promising new product opportunities."</p>
+                        </div>
+                        <div class="testimonial__author">
+                            <h4 class="testimonial__name">Mr. Prudhvi Varma</h4>
+                            <p class="testimonial__title">Founder, ZOLVE</p>
+                        </div>
+                    </div>
+
+                    <div class="testimonial-card">
+                        <div class="testimonial__logo">
+                            <img src="images/worldref.jpeg" alt="Company Logo" class="testimonial__logo-img">
+                        </div>
+                        <div class="testimonial__content">
+                            <p class="testimonial__quote">"It was a great experience with all of you. We would want to continue working for few more interesting assignments with BnC IITD in near future."</p>
+                        </div>
+                        <div class="testimonial__author">
+                            <h4 class="testimonial__name">Mr. Kirtiman Mishra</h4>
+                            <p class="testimonial__title">Founder, WorldRef</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -568,7 +598,7 @@
                     <!-- <a href="#bep">BEP</a> -->
                     <a href="#team">Team</a>
                     <a href="#collaborations">Collaborations</a>
-                    <a href="#clients">Clients</a>
+                    <a href="#clients">Projects</a>
                     <a href="#contact">Contact</a>
                 </div>
             </div>
