--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <div class="board__grid">
                     <div class="board-member">
                         <div class="board-member__avatar">
-                                <img src="images/team/dhruv.png" alt="Dhruv" class="board-member__photo">
+                                <img src="images/team/dhruvvvv.png" alt="Dhruv" class="board-member__photo">
                             </div>
                         <div class="board-member__info">
                             <h3 class="board-member__name">Dhruv Malhotra</h3>
@@ -265,7 +265,7 @@
                     <div class="board__grid">
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/aadish.png" alt="Aadish" class="board-member__photo">
+                                <img src="images/team/aadissh.png" alt="Aadish" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Aadish</h3>
@@ -320,10 +320,10 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/Oorja_Khetarpal-PGrep-Startups.jpg" alt="Ankush" class="board-member__photo">
+                                <img src="images/team/Oorja_Khetarpal-PGrep-Startups.jpg" alt="Oorja" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
-                                <h3 class="board-member__name">Ankush</h3>
+                                <h3 class="board-member__name">Oorja</h3>
                                 <p class="board-member__position">Startup Coordinator</p>
                                 <p class="board-member__description">Driving startup projects and collaborations</p>
                             </div>
@@ -410,7 +410,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/rohan.png" alt="Rohan" class="board-member__photo">
+                                <img src="images/team/rohannn.png" alt="Rohan" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Rohan</h3>
@@ -432,7 +432,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/disha.png" alt="Disha" class="board-member__photo">
+                                <img src="images/team/dishaa.png" alt="Disha" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Disha</h3>
