--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <div class="board__grid">
                     <div class="board-member">
                         <div class="board-member__avatar">
-                                <img src="images/team/dhruvvvv.png" alt="Dhruv" class="board-member__photo">
+                                <img src="images/team/dhruvvvv.jpeg" alt="Dhruv" class="board-member__photo">
                             </div>
                         <div class="board-member__info">
                             <h3 class="board-member__name">Dhruv Malhotra</h3>
@@ -421,7 +421,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/Urvi_Gawri_Events.jpg" alt="Urvi" class="board-member__photo">
+                                <img src="images/team/urviii.jpg" alt="Urvi" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Urvi</h3>
