--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <img src="images/team/urviii.jpg" alt="Urvi" class="board-member__photo">
+                                <img src="images/team/urviii.png" alt="Urvi" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Urvi</h3>
