--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                                 </div>
                             </div>
                             <div class="event-card__actions">
+                                  <a href="https://docs.google.com/forms/d/e/1FAIpQLScjRbtLi-g1LOQ6O44qd6EaYp-tBbIcwFWF8cUB_LwWWSVydA/viewform" target="_blank" rel="noopener noreferrer" class="btn btn--primary btn--event-register">Register Now</a>
                             </div>
                         </div>
                     </div>
