--- a/index.html
+++ b/index.html
@@ -578,6 +578,7 @@
                     <h3>Contact Information</h3>
                     <p><strong>Email:</strong> <a href="mailto:bnc.iitdelhi@gmail.com">bnc.iitdelhi@gmail.com</a></p>
                     <p><strong>Location:</strong> IIT Delhi Campus, New Delhi</p>
+                    <p><strong>Insta:</strong><a href="https://www.instagram.com/bnc_iitd?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="> BnC IITD Instagram </a></p>
                     <p class="contact__message">Interested in partnering with us to promote business at IIT Delhi?</p>
                 </div>
             </div>
