--- a/index.html
+++ b/index.html
@@ -45,14 +45,10 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero__content">
-                <h1 class="hero__title">Business and Consulting Club</h1>
-                <p class="hero__subtitle">IIT Delhi's premier undergraduate business organization</p>
-                <p class="hero__description">BnC covers three fields: Finance, Consulting, and Entrepreneurship. We develop our members' skills and prepare them for the workplace through thought provoking seminars and intense competitions</p>
-                <a href="#initiatives" class="btn btn--primary hero__cta">Know More</a>
                 <h1 class="hero__title">Business and Consulting Club, IIT Delhi</h1>
-                <p class="hero__subtitle">IIT Delhi's premier undergrad business&consulting club. </p>
-                <p class="hero__description">BnC focuses on organizing events and projects such as hosting industry experts and startup founders through seminars, organizing case-competitions, conducting interview bootcamps and providing consulting services to startups/organizations. We provide opportunities for skill building along with creativity, overall making this club an inclusive space for personal as well as collective growth.</p>
-                <a href="#initiatives" class="btn btn--primary hero__cta">Explore Initiatives</a>
+                <p class="hero__subtitle">IIT Delhi's premier undergrad business + consulting club. </p>
+                <p class="hero__description">BnC focuses on organizing events and projects likehosting industry experts and startup founders through seminars, organizing case-competitions, conducting interview bootcamps and providing consulting services to startups/organizations. We provide opportunities for skill building along with creativity, overall making this club an inclusive space for personal as well as collective growth.</p>
+                <a href="#initiatives" class="btn btn--primary hero__cta">Know More</a>
             </div>
         </div>
     </section>
