--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         <div class="board-member__info">
                             <h3 class="board-member__name">Dhruv Malhotra</h3>
                             <p class="board-member__position">President</p>
-                            <p class="board-member__description">Leading BCC's vision and strategic direction</p>
+                            <p class="board-member__description">Leading BnC's vision and strategic direction</p>
                         </div>
                     </div>
 
